[gd_scene load_steps=9 format=3 uid="uid://cq1lexg1np6nf"]

[ext_resource type="Script" uid="uid://cp76h5m2h7let" path="res://scripts/Controls/InputManager.gd" id="1_5x4ve"]
[ext_resource type="Script" uid="uid://dwyq6f1j3ibnu" path="res://scripts/Controls/ControlConfig.gd" id="2_prevj"]
[ext_resource type="Script" uid="uid://6wixwvm2of5c" path="res://scripts/Controls/StickController.gd" id="3_eebyn"]
[ext_resource type="Texture2D" uid="uid://dbire1mv0fx0f" path="res://assets/UI/ControlsUI/stick_background.png" id="4_giowa"]
[ext_resource type="Texture2D" uid="uid://bnmdy0c2itybe" path="res://assets/UI/ControlsUI/stick_cursor.svg" id="5_prevj"]
[ext_resource type="Texture2D" uid="uid://d32dwhbkqnelf" path="res://assets/UI/ControlsUI/stick_center.svg" id="6_eebyn"]
[ext_resource type="Script" uid="uid://dysumfde4h1qi" path="res://scripts/Controls/ThrottleController.gd" id="7_b66xp"]

[sub_resource type="Resource" id="Resource_config"]
script = ExtResource("2_prevj")
return_animation_trans = 4

[node name="InputManager" type="CanvasLayer"]
script = ExtResource("1_5x4ve")
config = SubResource("Resource_config")

[node name="UIRoot" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="StickController" type="Control" parent="UIRoot"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_eebyn")
config = SubResource("Resource_config")
background_texture = ExtResource("4_giowa")
cursor_texture = ExtResource("5_prevj")
center_texture = ExtResource("6_eebyn")

[node name="ThrottleController" type="Node" parent="."]
script = ExtResource("7_b66xp")
config = SubResource("Resource_config")
